<resources>
    <string name="app_name">BreakASweat</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="start">Begin Workout</string>
    <string name="previous">Previous</string>
    <string name='begin'>Begin</string>
    <string name="workout_history">Workout History</string>

    <string name="hello_first_fragment">Welcome to break a sweat!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="break_a_sweat">Break A Sweat</string>
    <string name="Today">Today</string>
    <string name="Exercise1">Exercise 1</string>
    <string name="Exercise2">Exercise 2</string>
    <string name="Exercise3">Exercise 3</string>
    <string name="Exercise4">Exercise 4</string>
    <string name="Exercise5">Exercise 5</string>


</resources>